Corrections de plusieurs bugs css : 1. Les zones de saisie des formulaires de recherches sont plus grandes qu'avant (une marge de 10px de chaque coté et un width de 100%). 2. Les boutons de validation des formulaires sont maintenant alignés à droite. 3. Les puces des liens des articles les plus populaires ne disparaissent désormais plus au survol du lien.
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@17800 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/sarkaspip_dev_21/styles/style.css
+++ b/sarkaspip_dev_21/styles/style.css
@@ -7,9 +7,8 @@ body {  /*surcharge le layout*/
 	font-family: Arial,Verdana,Helvetica,sans-serif;
 }
 
-a    {text-decoration:none;
+a {text-decoration:none;
 	color: #990000;
-
     display:inline ;
 	padding:0 /*pour modifier les styles de layout.css*/
 }	
@@ -169,16 +168,23 @@ a.repondre:hover {
 /*---comportement des elements de formulaires---*/
 .saisie-texte, .forml {
 	display:block;
-	color: #6262A4;
-	background: #F0F0FA;
-	border: 1px solid #6262A4;
 	margin:5px 0px;
 	padding:1px;
 }
 
+/* A VERIFIER : voir si .saisie-texte existe ailleurs que dans les formulaires "maison" de recherche  */
+.saisie-texte {margin: 10px 10px 5px 10px;}
+
+.saisie-texte input {
+	color: #6262A4;
+	background: #F0F0FA;
+	border: 1px solid #6262A4;
+	width: 100%;
+}
+
 .spip_bouton input {
 	display: block;
-	/*float: right;*/
+	float: right;
 	background: #6262A4;
 	color: #F0F0FA;
 	border: 1px solid #6262A4;
@@ -413,9 +419,6 @@ div#navigation{width:180px; padding : 0px 10px;}   /*surcharge le layout-gala*/
         
 .nav2 .auteur a:hover{ text-decoration: underline;}
 
-/* A VERIFIER : voir si .saisie-texte existe ailleurs que dans les formulaires "maison" de recherche  */
-.nav2 .saisie-texte {margin: 10px 10px 5px 10px;}
-
 /*bloc de statistiques*/
 .stats {
 	background: #FFFFFF;
@@ -453,12 +456,15 @@ div#navigation{width:180px; padding : 0px 10px;}   /*surcharge le layout-gala*/
 }
 
 /* ====================== style des info-bulles perso adaptees au contexte (image, plan...) ====================== */
-a.info span {
-    display: none;
+* html a.info:hover {   /* correction d'un bug IE */
+	background: none; 
+	background-image:url(../images/puce-n0.gif);
+	background-position: left top;
+	background-repeat: no-repeat;
 }
 
-a.info:hover {
-	background: none; /* correction d'un bug IE */
+a.info span {
+    display: none;
 }
 
 a.info:hover span {
